<resources>
    <string name="app_name">USmile</string>
    <string name="tips">Mẹo nhỏ</string>
    <string name="settings">Cài đặt</string>
    <string name="clinic">Phòng khám</string>
    <string name="take_pic">Chụp ảnh</string>
    <string name="documents">Hồ sơ</string>
    <!-- login -->
    <string name="welcome">Chào mừng trở lại,</string>
    <string name="login">Đăng nhập</string>
    <string name="or">Hoặc</string>
    <string name="register">Đăng ký</string>

    <string name="account">Email:</string>
    <string name="password">Mật khẩu:</string>
    <string name="resetPassword">Đặt lại mật khẩu:</string>
    <string name="confirmPassword">Xác nhận mật khẩu:</string>
    <string name="fogotPassword">Quên mật khẩu?</string>
    <string name="continueTV">Tiếp tục</string>
    <string name="goBackToLogin">Quay về trang đăng nhập</string>
    <string name="resetPasswordInfo">Mật khẩu mới đã được gửi qua Email bạn đăng kí, vui lòng kiểm tra Email để đặt lại mật khẩu.</string>
    <string name="clinicTV">Phòng khám</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">Đăng xuất</string>
    <string name="accountInfo">Thông tin tài khoản</string>
    <string name="instruction">Hướng dẫn sử dụng</string>
    <string name="appInfo">Thông tin ứng dụng</string>
    <string name="generalSetting">Cài đặt chung</string>
    <string name="law">Pháp lý</string>
    <string name="security">Chính sách về bảo mật</string>
    <string name="privacy">Chính sách về quyền riêng tư</string>
    <string name="terms">Điều khoản sử dụng</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</string>
    <string name="passwordText">Mật khẩu</string>
    <string name="rule_for_password">Mật khẩu phải có ít nhất 8 kí tự. Tránh sử dụng các mật khẩu quá phổ biến</string>
    <string name="changePasswordText">Thay đổi mật khẩu</string>
    <string name="advices">Tư vấn</string>
    <string name="history">Lịch sử</string>
    <string name="doctor">Bác sĩ</string>
    <string name="patient">Bệnh nhân</string>

    <string-array name="gender">
        <item>Nam</item>
        <item>Nữ</item>
    </string-array>
</resources>