<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".login.fragment.FogotPasswordSecondFragment"
    android:background="@drawable/gradient_background">

    <RelativeLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent">

        <TextView
            android:id="@+id/register"
            android:layout_width="280dp"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="50dp"
            android:text="@string/resetPassword"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold"></TextView>

        <ScrollView
            android:layout_below="@id/register"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="50dp"
            android:background="@drawable/top_rounded_background">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/register"
                android:padding="20dp">

                <TextView
                    android:id="@+id/resetEmail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="40dp"
                    android:text="@string/resetPasswordInfo"
                    android:textColor="@color/primary_blue"
                    android:gravity="center"
                    android:textSize="16sp"></TextView>

                <Button
                    android:layout_marginTop="290dp"
                    android:id="@+id/returnLoginPageButton"
                    android:layout_width="300dp"
                    android:layout_height="55dp"
                    android:layout_below="@+id/resetEmail"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="30dp"
                    android:background="@drawable/all_rounded_button_shape_light_blue"
                    android:text="@string/goBackToLogin"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    app:backgroundTint="@null" />
            </RelativeLayout>
        </ScrollView>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="invisible"
            ></ProgressBar>
    </RelativeLayout>
</FrameLayout>