<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginFragmentHolder"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.LoginActivity"
    android:background="@drawable/gradient_background">

    <RelativeLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent">
        <TextView
            android:id="@+id/welcome"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="20dp"
            android:layout_width="280dp"
            android:layout_height="50dp"
            android:text="@string/welcome"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/white">
        </TextView>

        <ScrollView
            android:layout_below="@+id/welcome"
            android:layout_marginTop="30dp"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@drawable/top_rounded_background">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"


                android:padding="20dp">

                <EditText
                    android:layout_marginTop="60dp"
                    android:id="@+id/accountSignInTV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/light_blue"
                    android:drawableStart="@drawable/person"
                    android:drawableEnd="@drawable/edit_pen"
                    android:drawablePadding="8dp"

                    android:hint="Tài khoản"
                    android:drawableTint="@color/primary_blue"
                    android:textColor="@color/primary_blue"
                    android:textColorHint="@color/primary_blue"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/passSignInTV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/accountSignInTV"
                    android:layout_marginTop="20dp"
                    android:backgroundTint="@color/light_blue"
                    android:drawableStart="@drawable/lock"
                    android:drawableEnd="@drawable/edit_pen"
                    android:drawablePadding="8dp"
                    android:drawableTint="@color/primary_blue"
                    android:hint="Mật khẩu"
                    android:inputType="textPassword"
                    android:textColor="@color/primary_blue"
                    android:textColorHint="@color/primary_blue"
                    android:textSize="18sp" />



            <RelativeLayout
                android:id="@+id/forgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="30dp"
                android:layout_below="@+id/passSignInTV"
                android:layout_marginBottom="50dp">

                <TextView
                    android:id="@+id/forgotPasswordTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="@string/fogotPassword"
                    android:textAllCaps="false"
                    android:textColor="@color/primary_blue"
                    android:textSize="20sp"
                    android:textStyle="italic|bold" />

            </RelativeLayout>

                <Button
                    android:id="@+id/loginBtn"
                    android:layout_width="300dp"
                    android:layout_height="55dp"
                    android:layout_below="@+id/forgotPassword"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/all_rounded_button_shape_blue"
                    android:text="@string/login"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    app:backgroundTint="@null" />

            <TextView
                android:id="@+id/or"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/loginBtn"
                android:layout_centerHorizontal="true"
                android:layout_margin="10dp"
                android:text="@string/or"
                android:textColor="@color/primary_blue"
                android:textSize="15sp"/>

                <Button
                    android:id="@+id/registerBtn"
                    android:layout_width="300dp"
                    android:layout_height="55dp"
                    android:layout_below="@+id/or"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="30dp"
                    android:background="@drawable/all_rounded_button_shape_light_blue"
                    android:text="@string/register"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    app:backgroundTint="@null" />
        </RelativeLayout>
        </ScrollView>
        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="invisible"
            ></ProgressBar>
    </RelativeLayout>
</FrameLayout>