<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".user.fragment.SettingApplicationInfoFragment"
    android:background="@drawable/gradient_background">

    <!-- TODO: Update blank fragment layout -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="70dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <TextView
            android:id="@+id/headerTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/law"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold"
            />

        <LinearLayout
            android:id="@+id/contentLayout"
            android:layout_below="@id/headerTextView"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/securityTextView"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:text="@string/security"
                android:textStyle="bold"
                android:textSize="18sp"
                android:gravity="center_vertical"
                android:textColor="@color/primary_blue"
                android:textAllCaps="false"
                android:drawableLeft="@drawable/question"
                android:drawablePadding="10dp"
                android:paddingLeft="5dp"
                android:drawableRight="@drawable/right_arrow"
                android:paddingEnd="5dp"
                android:drawableTint="@color/primary_blue"
                android:clickable="true"
                android:focusable="true"
                android:background="@drawable/top_rounded_button_shape"
                />

            <TextView
                android:id="@+id/privacyTextView"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:text="@string/privacy"
                android:textStyle="bold"
                android:textSize="18sp"
                android:gravity="center_vertical"
                android:textColor="@color/primary_blue"
                android:textAllCaps="false"
                android:drawableLeft="@drawable/info"
                android:drawablePadding="10dp"
                android:paddingLeft="5dp"
                android:drawableRight="@drawable/right_arrow"
                android:paddingEnd="5dp"
                android:drawableTint="@color/primary_blue"
                android:clickable="true"
                android:focusable="true"
                android:background="@drawable/no_rounded_shape_button"
                />

            <TextView
                android:id="@+id/termTextView"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:text="@string/terms"
                android:textStyle="bold"
                android:textSize="18sp"
                android:gravity="center_vertical"
                android:textColor="@color/primary_blue"
                android:textAllCaps="false"
                android:drawableLeft="@drawable/info"
                android:drawablePadding="10dp"
                android:paddingLeft="5dp"
                android:drawableRight="@drawable/right_arrow"
                android:paddingEnd="5dp"
                android:drawableTint="@color/primary_blue"
                android:clickable="true"
                android:focusable="true"
                android:background="@drawable/bottom_rounded_button_shape"
                />
        </LinearLayout>

        <TextView
            android:id="@+id/nameTextView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:layout_below="@id/contentLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="USmile 1.0.0"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:textStyle="bold"/>

        <TextView
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:layout_below="@id/nameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="(1648118030)"
            android:textSize="18sp"
            android:textColor="@color/white"/>

    </RelativeLayout>


</FrameLayout>