<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".login.fragment.RegisterThirdFragment"
    android:background="@drawable/gradient_background">

    <RelativeLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent">
        <TextView
            android:id="@+id/register"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="20dp"
            android:layout_width="280dp"
            android:layout_height="50dp"
            android:text="@string/register"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/white">
        </TextView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/register"
            android:layout_marginTop="30dp"
            android:background="@drawable/top_rounded_background"
            android:padding="20dp">

            <RelativeLayout
                android:id="@+id/account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="70dp"
                android:layout_marginBottom="20dp">

                <ImageView
                    android:id="@+id/accountImageView"
                    android:layout_width="35dp"
                    android:layout_height="30dp"
                    android:src="@drawable/account_icon"></ImageView>

                <TextView
                    android:id="@+id/accountTextView"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_toRightOf="@+id/accountImageView"
                    android:gravity="center_vertical"
                    android:text="@string/account"
                    android:layout_marginLeft="5dp"
                    android:textColor="@color/primary_blue"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/accountText"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:layout_below="@+id/accountTextView"
                    android:backgroundTint="@color/primary_blue"
                    android:drawableEnd="@drawable/edit_pen"
                    android:drawablePadding="8dp"
                    android:paddingStart="15dp"
                    android:paddingEnd="5dp"
                    android:paddingBottom="10dp"
                    android:textColor="@color/primary_blue"
                    android:textSize="20sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/account"
                android:layout_centerHorizontal="true">

                <ImageView
                    android:id="@+id/passwordImageView"
                    android:layout_width="35dp"
                    android:layout_height="30dp"
                    android:src="@drawable/password_icon"></ImageView>

                <TextView
                    android:id="@+id/passwordTextView"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_toRightOf="@+id/passwordImageView"
                    android:gravity="center_vertical"
                    android:text="@string/password"
                    android:textColor="@color/primary_blue"
                    android:layout_marginLeft="5dp"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/passwordText"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:layout_below="@+id/passwordTextView"
                    android:backgroundTint="@color/primary_blue"
                    android:drawableEnd="@drawable/edit_pen"
                    android:drawablePadding="8dp"
                    android:paddingStart="15dp"
                    android:paddingEnd="5dp"
                    android:paddingBottom="10dp"
                    android:textColor="@color/primary_blue"
                    android:textSize="20sp" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/confirm_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/password"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="70dp">

                <ImageView
                    android:id="@+id/comfirmPasswordImageView"
                    android:layout_width="35dp"
                    android:layout_height="30dp"
                    android:src="@drawable/password_icon"></ImageView>

                <TextView
                    android:id="@+id/confirmPasswordTextView"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_toRightOf="@+id/comfirmPasswordImageView"
                    android:gravity="center_vertical"
                    android:text="@string/confirmPassword"
                    android:layout_marginLeft="5dp"
                    android:textColor="@color/primary_blue"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/confirmPasswordText"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:layout_below="@+id/confirmPasswordTextView"
                    android:backgroundTint="@color/primary_blue"
                    android:drawableEnd="@drawable/edit_pen"
                    android:drawablePadding="8dp"
                    android:paddingStart="15dp"
                    android:paddingEnd="5dp"
                    android:paddingBottom="10dp"
                    android:textColor="@color/primary_blue"
                    android:textSize="20sp" />

            </RelativeLayout>


            <Button
                android:id="@+id/registerBtn"
                android:layout_width="300dp"
                android:layout_height="55dp"
                android:layout_below="@+id/confirm_password"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="30dp"
                android:background="@drawable/all_rounded_button_shape_light_blue"
                android:text="@string/register"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:backgroundTint="@null" />
        </RelativeLayout>
        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="invisible"
            ></ProgressBar>
    </RelativeLayout>
</FrameLayout>